# pompom

./: README.md  dune-project  pompom.opam
lib/: aggregator.ml  boomer.ml  boomer.mli  dependency.ml  depmap.ml  depmgmt.ml  depmgmt.mli  deps.ml  dune  efdep.ml  efdep.mli  efpom.ml  efpom.mli  errors.ml  exclusions.ml  ga_map.ml  inheritable.ml  inheritable.mli  inheritor.ml  map_utils.ml  parent_id.ml  parser.ml  pom.ml  pompom.ml  pompom.mli  properties.ml  properties.mli  propinator.ml  propinator.mli  repo.ml  scopes.ml  tree.ml  tree.mli  tree_cache.ml
test/: cdata.t  dep_management.t  dep_management_bom.t  dep_management_noparent.t  deps.t  deps_closest.t  deps_closest_depmgmt.t  deps_exclusion.t  deps_exclusion_depmgmt.t  deps_inheritance.t  deps_optional.t  deps_scope.t  deps_transitive.t  deptree.ml  dune  efpom.ml  efpom.t  minimalist_child.t  modules.t  noparent.t  parent.t  pomdump.ml  props.t  props_bom.t  props_inheritance.t  props_predefs.t  recursive_deps.t  xml.ml
test/deptree/: base.t  dt_cyclic.t  dt_exclusions.t  dt_order.t  dt_self_refer.t  dune
test/props/: props.t  props_bom.t  props_inheritance.t  props_predefs.t  props_predefs_depmgmt_inheritance.t
