(executable
 (name deptree)
 (libraries pompom landmarks)
 (modules deptree)
 (instrumentation
  (backend landmarks)))

(executable
 (name efpom)
 (libraries pompom)
 (modules efpom))

(executable
 (name pomdump)
 (libraries pompom)
 (modules pomdump))

(executable
 (name xml)
 (modules xml))

(env
 (_
  (env-vars
   (HOME "."))))

(cram
 (deps deptree.exe efpom.exe pomdump.exe xml.exe))
